# Content_platform

./: .env.sample  README.md  coverage.json  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
content/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_content_subscription_price.py  0003_category_content_category.py  0004_content_owner.py  0005_remove_content_subscription_price_and_more.py
content/templates/content/: base.html  content_confirm_delete.html  content_detail.html  content_form.html  content_list.html
users/: forms.py  models.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_user_payment_id_delete_payment.py  0004_alter_user_email.py
users/templates/: login.html
users/templates/users/: user_form.html
